package br.unitins.tp1.projeto.model;

public enum FormaPagamento {
    PIX, CARTAO_CREDITO, CARTAO_DEBITO, BOLETO
}
