package br.unitins.tp1.projeto.model;

public enum Perfil {
    ROLE_ADMIN,
    ROLE_USER
}
