package br.unitins.tp1.projeto.model;

public enum StatusPagamento {
    PENDENTE, APROVADO, RECUSADO, ESTORNADO
}
