package br.unitins.tp1.projeto.model;

public enum StatusPedido {
    AGUARDANDO_PAGAMENTO, PAGO, EM_PREPARACAO, ENVIADO, ENTREGUE, CANCELADO
}
